# pysearxng

./: README.md  pyproject.toml
examples/: basic_usage.py  local_instance.py  pyplexity_adapter.py  pyplexity_integration_guide.md  pyplexity_replacement.py  simple_local.py  simple_search.py
tests/: conftest.py
